# magflow-erp

./: .bandit  .coveragerc  .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  ABSOLUTE_FINAL_FIX.md  ACCES_PRODUCT_MATCHING.md  ADDITIONAL_RECOMMENDATIONS_2025_10_13.md  ALL_ERRORS_FIXED_COMPLETE.md  ALL_ERRORS_FIXED_FINAL.md  ALL_ERRORS_RESOLVED_2025-10-01.md  ALL_FIXES_COMPLETE_2025_10_20.md  ANALIZA_COMPLETA_FINALA_2025_10_11.md  ANALIZA_ERORI_2025_10_11.md  ANALIZA_SINCRONIZARE_EMAG_SI_RECOMANDARI.md  ANALIZA_SI_REVERT_LA_VERSIUNE_STABILA_2025_10_18.md  ANALIZA_SQL_INJECTION_2025_10_17.md  ANALIZA_TRANSFORMARE_PRODUSE_GOOGLE_SHEETS_2025_10_21.md  API_TESTING_EXAMPLES.md  AUTH_FIX_COMPLETE.md  AUTOMATIC_URL_GENERATION_IMPLEMENTATION.md  BACKEND_FIX_500_ERROR_2025-10-01.md  BMX136_ALL_SUPPLIERS_VERIFIED.md  BMX136_FINAL_FIX_COMPLETE.md  BMX136_FIX_COMPLETE.md  BULK_DRAFT_PO_IMPLEMENTATION_2025_10_11.md  BULK_SELECT_VERIFIED_FIX.md  BUTTON_RELOCATION_IMPROVEMENTS_2025_10_23.md  CHANGELOG.md  CHANGELOG_LOW_STOCK_IMPROVEMENTS.md  CHANGES_SUMMARY_2025_10_10.md  CHANGES_SUMMARY_EMAG_SYNC_2025_10_11.md  CHANGES_SUMMARY_LOW_STOCK_2025_10_11.md  CHINESE_NAME_EDIT_IMPLEMENTATION.md  CHINESE_NAME_SYNC_SOLUTION.md  CLARIFICARE_FINALA_2025_10_10.md  CLARIFICATION_NO_CRITICAL_ERROR.md  CLEANUP_MATCHING_GROUPS_GUIDE.md  (+800 more)
app/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.simple  Makefile  README.md  STRUCTURE.txt  __init__.py  alembic.ini  docker-compose.prod.yml  docker-compose.yml  logging_setup.py  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  worker.py
app/api/: __init__.py  admin.py  auth.py  categories.py  categories_new.py  dependencies.py  deps.py  health.py  metrics.py  middleware.py  observability.py  pool.py  products.py  products_new.py  reporting.py  simple_products.py  tasks.py  test_admin.py  test_sync.py  well_known.py
app/config/: emag_config.py
app/core/: __init__.py  auth.py  cache.py  cache_config.py  celery_beat_schedule.py  circuit_breaker.py  cleanup.py  config.py  configuration.py  container.py  database.py  database_config.py  database_optimization.py  database_resilience.py  db.py  db_health.py  dependency_injection.py  documentation.py  emag_constants.py  emag_errors.py  emag_logger.py  emag_monitoring.py  emag_rate_limiter.py  emag_validator.py  error_handling.py  exceptions.py  handlers.py  health_errors.py  (+14 more)
(+1514 files in other folders)
