[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magflow"
version = "0.1.0"
description = "MagFlow ERP System"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Will be populated from requirements.txt
]

[project.optional-dependencies]
test = [
    # Testing framework
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist[psutil]>=3.0.0",
    
    # HTTP testing
    "httpx>=0.23.0",
    "pytest-httpx>=0.20.0",
    "aiohttp>=3.8.0",
    
    # Test utilities
    "pytest-env>=0.6.2",
    "pytest-sugar>=0.9.5",
    "pytest-randomly>=3.12.0",
    "pytest-factoryboy>=2.5.0",
    "freezegun>=1.2.0",
    "pytest-benchmark>=4.0.0",
    "pytest-bdd>=6.0.0",
    "pytest-testmon>=1.4.0",
    "pytest-watch>=4.2.0",
    "pytest-timeout>=2.1.0",
    
    # Database testing
    "pytest-postgresql>=4.1.0",
    "pytest-redis>=2.2.0",
    "pytest-docker>=1.0.0",
    
    # Code quality
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.910",
    "flake8>=4.0.0",
    "pytest-flake8>=1.1.1",
    "pytest-isort>=3.0.0",
    "pytest-mypy>=0.9.0",
    "pytest-pylint>=0.18.0",
    
    # Documentation
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
]

dev = [
    "magflow[test]",
    "pre-commit>=2.0.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
]
